--- a/src/assets/sass/overrides/_skins.scss
+++ b/src/assets/sass/overrides/_skins.scss
@@ -319,7 +319,23 @@ $sk-skin-btn-default: #293756;
         border: 2px solid $sk-skin-accent;
         background-color: $sk-skin-accent;
     }
-    
+    .search-big {
+        width: 50%;
+        margin: 0 auto;
+
+        input::placeholder {
+            font-size: 2rem;
+            font-family: $font-family-base;
+        }
+
+        .form-control {
+            height: 3rem;
+            border-radius: 3rem;
+            font-size: 1.8rem;
+            font-weight: 300;
+            box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.06), 0 2px 10px 0 rgba(0, 0, 0, 0.02);
+        }
+    }
     /* Select colors */
     .dropdown-content {
         li:not(.disabled) {
@@ -492,12 +508,12 @@ $sk-skin-btn-default: #293756;
         .activity {
             height: 100%;
             position: relative;
-        }
-        .activity-label {
-            order: 2;
-            position: absolute;
-            top: 1rem;
-            left: 0;
+            .activity-label {
+                order: 2;
+                position: absolute;
+                top: 1rem;
+                left: 0;
+            }
         }
     }
     /* Dropdown */
