--- a/src/assets/sass/_custom.scss
+++ b/src/assets/sass/_custom.scss
@@ -250,6 +250,28 @@ h6 {
     margin-bottom: 1.5rem;
 }
 
+.search-big {
+    width: 50%;
+    margin: 0 auto;
+
+    input::placeholder {
+        font-size: 2rem;
+        font-family: $font-family-base;
+    }
+
+    .form-control {
+        height: 3rem;
+        border-radius: 3rem;
+        font-size: 1.8rem;
+        font-weight: 300;
+        box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.06), 0 2px 10px 0 rgba(0, 0, 0, 0.02);
+    }
+
+    span {
+        z-index: 0;
+    }
+}
+
 .input-group .form-control:not(:last-child) {
     border-bottom-right-radius: .4rem;
     border-top-right-radius: .4rem;
