--- a/src/assets/sass/_variables.scss
+++ b/src/assets/sass/_variables.scss
@@ -57,7 +57,7 @@ $enable-flex:               true !default;
 $enable-rounded:            true !default;
 $enable-shadows:            false !default;
 $enable-gradients:          false !default;
-$enable-transitions:        false !default;
+$enable-transitions:        true !default;
 $enable-hover-media-query:  false !default;
 $enable-grid-classes:       true !default;
 
@@ -234,7 +234,6 @@ $component-active-bg:    $brand-primary !default;
 
 $caret-width:            .3em !default;
 $caret-width-lg:         $caret-width !default;
-
 
 // Tables
 //
