--- a/src/assets/sass/app.scss
+++ b/src/assets/sass/app.scss
@@ -59,6 +59,7 @@
 @import "node_modules/mdb-pro/sass/mdb/free/animations";
 @import "node_modules/mdb-pro/sass/mdb/free/helpers";
 @import "node_modules/mdb-pro/sass/mdb/free/typography";
+@import "overrides/typography";
 @import "node_modules/mdb-pro/sass/mdb/free/buttons";
 @import "node_modules/mdb-pro/sass/mdb/free/cards-basic";
 @import "node_modules/mdb-pro/sass/mdb/free/dropdowns";
