--- a/src/assets/sass/_custom.scss
+++ b/src/assets/sass/_custom.scss
@@ -526,8 +526,8 @@ header .navbar .breadcrumb {
     text-align: left;
     font-weight: 400;
     padding-bottom: .25rem;
-    margin-bottom: 1rem;
-    margin-top: -1rem;
+    margin-bottom: .6rem;
+    margin-top: 0;
 }
 
 .page-name-l-white {
