--- a/src/assets/sass/overrides/_skins.scss
+++ b/src/assets/sass/overrides/_skins.scss
@@ -730,6 +730,81 @@ $sk-skin-btn-default: #293756;
             }
         }
     }
+    
+    /* Date Picker */
+    .picker__box {
+        border: none;
+        .picker__header {
+            .picker__date-display {
+                background-color: $color-nav-sub;
+                .picker__weekday-display {
+                    background-color: $color-nav;
+                }
+            }
+            .picker__select--year,
+            .picker__select--month {
+                border: 1px solid lighten($color-sidebar, 70%);
+                font-family: $font-family-base;
+                background-color: $white;
+                border-radius: .4rem;
+                color: $color-body_text;
+                text-indent: .35rem;
+            }
+            .picker__nav--prev {
+                &:hover {
+                    cursor: pointer;
+                    color: $white;
+                    background: $color-table-th;
+                }
+                &:before {
+                    border-right: 0.75em solid $white;
+                }
+            }
+            .picker__nav--next {
+                &:hover {
+                    cursor: pointer;
+                    color: $white;
+                    background: $color-table-th;
+                }
+                &:before {
+                    border-right: 0;
+                    border-left: 0.75em solid $white;
+                }
+            }
+        }
+        .picker__table {
+            .picker__day--selected,
+            .picker__day--selected:hover,
+            .picker--focused .picker__day--selected {
+                background-color: $color-nav;
+            }
+        }
+        .picker__footer {
+            text-align: right;
+            padding: 8px 8px;
+            .picker__button--today,
+            .picker__button--clear,
+            .picker__button--close {
+                font-family: $font-family-base;
+                font-weight: 600;
+                letter-spacing: .1rem;
+                background-color: $color-nav;
+                border-radius: .4rem;
+                color: $white;
+                padding: 0.8rem 0 0.7rem 0;
+                &:before {
+                    display: none;
+                }
+                &:hover {
+                    background-color: $color-table-th;
+                    color: $color-nav;
+                }
+            }
+            .picker__button--close {
+                background-color: $color-cancel;
+            }
+        }
+    }
 }
 
 
