--- a/src/assets/sass/app.scss
+++ b/src/assets/sass/app.scss
@@ -56,7 +56,7 @@
 
 // MDB Free
 //@import "overrides/typography";//TODO: removed from mdb check for details
-@import "node_modules/mdb-pro/sass/mdb/free/animations";
+//@import "node_modules/mdb-pro/sass/mdb/free/animations";
 @import "node_modules/mdb-pro/sass/mdb/free/helpers";
 @import "node_modules/mdb-pro/sass/mdb/free/typography";
 @import "overrides/typography";
