--- a/src/assets/sass/overrides/_typography.scss
+++ b/src/assets/sass/overrides/_typography.scss
@@ -1,4 +1,71 @@
+// Typography
 body {
   font-family: 'Open Sans', sans-serif;
   font-weight: normal;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-weight: 300;
+}
+
+@each $key, $val in $grid-breakpoints {
+  @include media-breakpoint-up($key) {
+    $y: map-get($responsive-headings, $key);
+    @each $name,
+    $value in $y {
+      .#{$name}-responsive {
+        font-size: $value;
+      }
+    }
+  }
+}
+
+@each $size, $length in $spacers {
+  .fs-#{$size} {
+    font-size: $length !important;
+  }
+}
+
+.divider-new {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  font-weight: 300;
+  margin-top: 45px;
+  margin-bottom: 45px;
+  h2 {
+    margin-top: 5px;
+  }
+  &:before {
+    content: '';
+    height: 1.5px;
+    background: #c6c6c6;
+    flex: 1;
+    margin: 0 .45em 0 0;
+  }
+  &:after {
+    content: '';
+    height: 1.5px;
+    background: #c6c6c6;
+    flex: 1;
+    margin: 0 0 0 .45em;
+  }
+}
+
+blockquote {
+  padding: .5rem 1rem;
+  font-size: 1.25rem;
+  border-left: .25rem solid #eceeef;
+  p {
+    font-size: 0.9rem;
+    padding-left: 2rem;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+  }
 }
