--- a/src/assets/sass/overrides/_skins.scss
+++ b/src/assets/sass/overrides/_skins.scss
@@ -312,7 +312,7 @@ $sk-skin-btn-default: #293756;
     }
     input.select-dropdown {
         margin-top: .2rem;
-        color: lighten($body-color, 40%);
+        color: lighten($body-color, 20%);
         margin-bottom: 30px;
         height: 3.2rem;
     }
@@ -444,7 +444,7 @@ $sk-skin-btn-default: #293756;
     // Tags, form-header, card-header
     .form-header,
     .card-header {
-        background-color: lighten( $sk-skin-accent, 2%);
+        background-color: lighten($sk-skin-accent, 2%);
     }
     .spinner-primary-color,
     .spinner-primary-color-only {
@@ -464,6 +464,7 @@ $sk-skin-btn-default: #293756;
     }
     /* Tabs */
     .classic-tabs {
+        border-radius: 0;
         li {
             a {
                 font-size: 1.3rem;
@@ -492,6 +493,7 @@ $sk-skin-btn-default: #293756;
                     color: $sk-skin-background;
                     text-shadow: none;
                     cursor: pointer;
+                    opacity: 1;
                     
                 }
             }
