--- a/src/assets/sass/overrides/_skins.scss
+++ b/src/assets/sass/overrides/_skins.scss
@@ -18,6 +18,12 @@ $sk-skin-btn-primary: #309e9e;
 $sk-skin-btn-secondary: #324f7b;
 $sk-skin-btn-default: #293756;
 .sk-skin {
+    table.table a {
+        color: $sk-skin-grey;
+        &:hover {
+            color: $sk-skin-accent;
+        }
+    }
     .view {
         margin-left: -15px;
         margin-right: -15px;
@@ -58,10 +64,12 @@ $sk-skin-btn-default: #293756;
         .navbar-nav {
             .nav-item {
                 .dropdown-menu a {
+                    color: $sk-skin-grey;
                     &:hover,
                     &:focus,
                     &:active {
                         background-color: darken( $sk-skin-accent, 5%);
+                        color: $sk-skin-accent;
                     }
                 }
             }
@@ -894,6 +902,16 @@ $sk-skin-btn-default: #293756;
                 color: $info-color;
             }
         }
+    }
+    .total-sty {
+        font-weight: 800;
+        font-size: 1.15rem;
+    }
+    @media only screen and (max-width: 768px) {
+        .total-sty {
+            margin-bottom: 4rem;
+            border-bottom: 1px dashed lighten($color-sidebar, 70%);
+            }
     }
 }
 
