--- a/src/assets/sass/overrides/_skins.scss
+++ b/src/assets/sass/overrides/_skins.scss
@@ -660,7 +660,9 @@ $sk-skin-btn-default: #293756;
         background-color: $white;
         height: 100%;
         border-bottom-left-radius: 1rem;
+        border-bottom-right-radius: 1rem;
         border-left: 1px solid lighten($color-sidebar, 70%);
+        border-right: 1px solid lighten($color-sidebar, 70%);
         border-bottom: 1px solid lighten($color-sidebar, 70%);
     }
     .dropdown-arrow {
@@ -695,7 +697,7 @@ $sk-skin-btn-default: #293756;
                 &:before {
                     @extend .dropdown-arrow;
                     top: -12px;
-                    left: 160px;
+                    left: 45%;
                 }
             }
             &:hover {
@@ -703,6 +705,7 @@ $sk-skin-btn-default: #293756;
                 cursor: pointer;
                 &:last-child {
                     border-bottom-left-radius: 1rem;
+                    border-bottom-right-radius: 1rem;
                 }
             }
         }
@@ -742,7 +745,7 @@ $sk-skin-btn-default: #293756;
     /* User login dropdown */
     .double-nav .dropdown .dropdown-menu .user-box {
         @extend .dropdown-box;
-        min-width: 220px;
+//        min-width: 220px;
         position: relative;
         a {
             font-size: .85rem;
@@ -762,7 +765,7 @@ $sk-skin-btn-default: #293756;
                 &:before {
                     @extend .dropdown-arrow;
                     top: -12px;
-                    left: 130px;
+                    left: 45%;
                 }
             }
             &:hover {
@@ -770,6 +773,7 @@ $sk-skin-btn-default: #293756;
                 cursor: pointer;
                 &:last-child {
                     border-bottom-left-radius: 1rem;
+                    border-bottom-right-radius: 1rem;
                 }
             }
         }
@@ -997,6 +1001,7 @@ $sk-skin-btn-default: #293756;
         tbody {
             display: block;
             width: 100%;
+            background-color: transparent;
         }
         .table, table {
             tbody {
@@ -1026,6 +1031,29 @@ $sk-skin-btn-default: #293756;
             border-bottom: 1px solid lighten($color-sidebar, 70%);
             padding-bottom: 11px;
             margin-bottom: 11px;
+        }
+        table.table-hover tbody tr:hover {
+            background-color: transparent;
+        }
+        table th[data-title]:before,
+        table td[data-title]:before {
+            content: attr(data-title) ":\00A0";
+            font-weight: bold;
+            font-size: 0.7rem;
+            color: $sk-skin-accent;
+            text-transform: uppercase;
+        }
+        .double-nav {
+            padding-right: 0 !important;
+        }
+        .navbar .dropdown-menu.dropdown-menu-right {
+            right: 0 !important;
+        }
+        .profile-m-2 {
+            margin-bottom: .5rem;
+        }
+        .display-2, display-3 {
+            font-size: 2.5rem;
         }
     }
     
